--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -8,9 +8,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".startScreen">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="getting Started"
+            />
+
+    <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            />
 
 </RelativeLayout>
