--- a/app/src/main/res/layout/container.xml
+++ b/app/src/main/res/layout/container.xml
@@ -5,6 +5,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="Start"
+            />
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/fragment_container"
