--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -2,12 +2,11 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:background="@android:color/darker_gray"
                 android:layout_height="wrap_content">
 
     <TextView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@android:color/darker_gray"
-              android:text="TEST"
+              android:text="Fragment"
             />
 </LinearLayout>
