--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -4,9 +4,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-    <TextView android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@android:color/darker_gray"
-              android:text="Fragment"
+    <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            android:layout_weight="1"
             />
+
 </LinearLayout>
