--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -25,5 +25,7 @@
 
         <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
 
+        <item name="android:listViewStyle">@style/ListViewIBSTheme</item>
+
     </style>
 </resources>
