--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,17 +74,19 @@
         <item name="android:background">@drawable/custom_tab_indicator</item>
         <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item>
         <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:divider">@drawable/ibstheme_tab_indicator_holo</item>
-        <item name="android:dividerPadding">10dp</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:divider">@color/white</item>
+        <item name="android:dividerPadding">4dp</item>
         <item name="android:showDividers">middle</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:paddingRight">8dp</item>
-        <item name="android:fadingEdge">horizontal</item>
-        <item name="android:fadingEdgeLength">8dp</item>
     </style>
 
     <style name="CustomTabPageIndicator.Text" parent="android:TextAppearance.Medium">
+    </style>
+
+    <style name="ListViewIBSTheme" parent="@android:style/Widget.ListView">
+        <item name="android:background">#2F3F66</item>
+        <item name="android:fastScrollEnabled">true</item>
+        <item name="android:dividerHeight">4dp</item>
     </style>
 
 </resources>
