--- a/app/src/main/res/layout/room_detail_list_item.xml
+++ b/app/src/main/res/layout/room_detail_list_item.xml
@@ -2,15 +2,11 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
+                android:minHeight="48dp"
                 android:layout_height="match_parent">
-    <TextView android:layout_width="wrap_content"
+    <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:text="RoomOverview"/>
-    <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/listView"
-            android:layout_weight="1"
+              android:id="@+id/textView"
             />
 
 </RelativeLayout>
