--- a/app/src/main/res/layout/activity_speaker_acitvity.xml
+++ b/app/src/main/res/layout/activity_speaker_acitvity.xml
@@ -38,7 +38,7 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button_bottom"
+            android:id="@+id/button_down"
             android:text="down"
             android:layout_below="@+id/button_up"
             />
