--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -10,5 +10,12 @@
             android:id="@+id/listView"
             android:layout_weight="1"
             />
+    <Button android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_add_room"
+            android:layout_below="@id/listView"
+            android:id="@+id/button"
+            />
 
-</LinearLayout>
+
+</RelativeLayout>
