--- a/app/src/main/res/layout/room_add_fragment.xml
+++ b/app/src/main/res/layout/room_add_fragment.xml
@@ -25,6 +25,11 @@
                   android:layout_height="wrap_content"
                   android:id="@+id/editWidth"
                   android:layout_toRightOf="@id/textWidth"
+                  android:inputType="number"
+                  android:hint="@string/room_add_width"
+                  android:singleLine="true"
+                  android:lines="1"
+                  android:maxLines="1"
                 />
     </RelativeLayout>
     <RelativeLayout android:layout_width="match_parent"
@@ -41,6 +46,11 @@
                   android:layout_height="wrap_content"
                   android:id="@+id/editLength"
                   android:layout_toRightOf="@id/textLength"
+                  android:inputType="number"
+                  android:hint="@string/room_add_length"
+                  android:singleLine="true"
+                  android:lines="1"
+                  android:maxLines="1"
                 />
     </RelativeLayout>
     <RelativeLayout android:layout_width="match_parent"
@@ -57,6 +67,11 @@
                   android:layout_height="wrap_content"
                   android:id="@+id/editHeight"
                   android:layout_toRightOf="@id/textHeight"
+                  android:inputType="number"
+                  android:hint="@string/room_add_height"
+                  android:singleLine="true"
+                  android:lines="1"
+                  android:maxLines="1"
                 />
     </RelativeLayout>
     <RelativeLayout android:layout_width="match_parent"
@@ -72,6 +87,9 @@
                   android:layout_height="wrap_content"
                   android:id="@+id/editName"
                   android:layout_toRightOf="@id/textName"
+                  android:singleLine="true"
+                  android:lines="1"
+                  android:maxLines="1"
                 />
     </RelativeLayout>
     <Button android:layout_width="match_parent"
