--- a/app/src/main/res/layout/room_detail_fragment.xml
+++ b/app/src/main/res/layout/room_detail_fragment.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:custom="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="RoomOverview"/>
-    <ListView
+   <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listView"
             android:layout_weight="1"
+            android:visibility="gone"
+            />
+    <de.ibs.app.roomview.RoomView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            custom:showText="true"
+            custom:labelPosition="left"
+            android:id="@+id/roomView"
+            android:background="#00FF00"
+            android:layout_below="@id/listView"
             />
 
 </RelativeLayout>
