--- a/app/src/main/res/layout/room_detail_fragment.xml
+++ b/app/src/main/res/layout/room_detail_fragment.xml
@@ -20,7 +20,7 @@
             custom:labelPosition="left"
             android:id="@+id/roomView"
             android:layout_below="@id/listView"
-
+            android:layout_marginTop="20dp"
             />
 
 </RelativeLayout>
