--- a/app/src/main/res/layout/room_detail_fragment.xml
+++ b/app/src/main/res/layout/room_detail_fragment.xml
@@ -22,5 +22,12 @@
             android:layout_below="@id/listView"
             android:layout_marginTop="20dp"
             />
+    <SeekBar android:layout_width="200dp"
+             android:layout_height="match_parent"
+             android:id="@+id/roomHeightSeek"
+             android:progress="20"
+             android:max="100"
+             android:layout_below="@id/roomView"
+            />
 
 </RelativeLayout>
