add theme color

--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -5,6 +5,8 @@
 
     <style name="AppTheme" parent="android:Theme.Holo">
 
+        <item name="android:windowBackground">@color/colorTheme</item>
+
         <item name="android:editTextStyle">@style/EditTextIBSTheme</item>
 
         <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewIBSTheme</item>
