--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="ibstheme_color">#f8f8f8</color>
     <color name="default_background">#FFB200</color>
     <color name="white">#FFFFFF</color>
+    <color name="colorTheme">#EEC63A</color>
 </resources>
