--- a/app/src/main/res/layout/room_overview_list_item.xml
+++ b/app/src/main/res/layout/room_overview_list_item.xml
@@ -3,10 +3,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:minHeight="48dp"
-                android:layout_height="match_parent">
+                android:descendantFocusability="blocksDescendants"
+                android:layout_height="48dp">
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/textView"
+              style="@style/ListTextStyle"
+            />
+    <ImageButton android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/setting"
+            style="@style/ListButtonStyle"
             />
 
 </RelativeLayout>
