--- a/app/src/main/res/layout/room_overview_fragment.xml
+++ b/app/src/main/res/layout/room_overview_fragment.xml
@@ -10,7 +10,7 @@
             android:id="@+id/indicator"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
-            style="@style/Widget.TabPageIndicator"
+            android:layout_marginBottom="16dp"
             />
     <android.support.v4.view.ViewPager
             android:id="@+id/pager"
