add Button style to theme

--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -18,6 +18,7 @@
         <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
         <item name="android:listViewStyle">@style/ListStyle</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:buttonStyle">@style/ButtonAppTheme</item>
     </style>
     <style name="ActionBar.Solid.Apptheme" parent="@android:style/Widget.Holo.ActionBar.Solid">
         <item name="android:background">@drawable/ab_background_textured_apptheme</item>
@@ -52,7 +53,7 @@
     <style name="ProgressBar.Apptheme" parent="@android:style/Widget.Holo.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_apptheme</item>
     </style>
-
+^
     <style name="ActionButton.CloseMode.Apptheme" parent="@android:style/Widget.Holo.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_apptheme</item>
     </style>
@@ -62,6 +63,4 @@
         <item name="android:popupMenuStyle">@style/PopupMenu.Apptheme</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Apptheme</item>
     </style>
-
-
 </resources>
