--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ibstheme_color">#f8f8f8</color>
+    <color name="ibstheme_color">#F1CE4A</color>
     <color name="default_background">#FFB200</color>
     <color name="white">#FFFFFF</color>
+    <color name="darkGrey">#4D4D4D</color>
+    <color name="midGrey">#B3B3A7</color>
+    <color name="brightGrey">#CCCCCC</color>
     <color name="colorTheme">#EEC63A</color>
     <color name="white60">#EAFFFFFF</color>
     <color name="themeWhite">#fffcf1</color>
+    <color name="black">#000000</color>
 </resources>
