--- a/app/src/main/res/layout/container.xml
+++ b/app/src/main/res/layout/container.xml
@@ -8,8 +8,10 @@
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/fragment_container"
-                 android:layout_marginLeft="16dp"
-                 android:layout_marginRight="16dp"
+                 android:layout_marginLeft="18dp"
+                 android:layout_marginRight="18dp"
+                 android:layout_marginTop="28dp"
+                 android:layout_marginBottom="96dp"
             />
 
 </LinearLayout>
