--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -17,11 +17,11 @@
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Apptheme</item>
         <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
         <item name="android:listViewStyle">@style/ListStyle</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:buttonStyle">@style/ButtonAppTheme</item>
     </style>
     <style name="ActionBar.Solid.Apptheme" parent="@android:style/Widget.Holo.ActionBar.Solid">
-        <item name="android:background">@drawable/ab_background_textured_apptheme</item>
+        <item name="android:background">@color/white</item>
         <item name="android:backgroundStacked">@drawable/ab_stacked_solid_apptheme</item>
         <item name="android:backgroundSplit">@drawable/ab_background_textured_apptheme</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Apptheme</item>
@@ -63,4 +63,5 @@
         <item name="android:popupMenuStyle">@style/PopupMenu.Apptheme</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Apptheme</item>
     </style>
+
 </resources>
