--- a/app/src/main/res/layout/room_overview_fragment.xml
+++ b/app/src/main/res/layout/room_overview_fragment.xml
@@ -9,7 +9,7 @@
     <com.viewpagerindicator.TabPageIndicator
             android:id="@+id/indicator"
             android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_marginBottom="16dp"
             android:background="@color/white"
             />
