--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
     <style name="CustomTabPageIndicator" parent="Widget.TabPageIndicator">
         <item name="android:background">@drawable/tab_indicator_ab_apptheme</item>
         <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/darkGrey</item>
         <item name="android:textSize">22sp</item>
         <item name="android:divider">@color/white</item>
         <item name="android:dividerPadding">4dp</item>
@@ -13,6 +13,7 @@
     </style>
 
     <style name="CustomTabPageIndicator.Text" parent="android:TextAppearance.Medium">
+        <item name="android:textColor">@color/darkGrey</item>
     </style>
 
     <style name="ListStyle" parent="android:Widget.ListView">
