--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -19,6 +19,9 @@
             android:text="@string/button_add_room"
             android:layout_below="@id/listView"
             android:id="@+id/button"
+            android:layout_marginRight="64dp"
+            android:layout_marginLeft="64dp"
+            android:layout_marginTop="16dp"
             />
 
 
