--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -17,10 +18,12 @@
     <Button android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/button_add_new_room"
-            android:layout_below="@id/listView"
+            android:layout_alignParentBottom="true"
             android:id="@+id/button"
             android:layout_marginRight="64dp"
             android:layout_marginLeft="64dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+
             />
 </RelativeLayout>
