--- a/app/src/main/res/layout/room_add_fragment.xml
+++ b/app/src/main/res/layout/room_add_fragment.xml
@@ -106,7 +106,6 @@
 
     <Button android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:id="@+id/button"
             android:text="@string/button_add_room"
             android:background="@color/white"
@@ -116,7 +115,7 @@
 
     <Button android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/halterungHinzufuegenButton"
+            android:id="@+id/addSpeakerButton"
             android:text="@string/halterungHinzufuegenButton"
             android:background="@color/white"
             android:textSize="18dp"
