--- a/app/src/main/res/layout/room_add_fragment.xml
+++ b/app/src/main/res/layout/room_add_fragment.xml
@@ -10,7 +10,13 @@
                 android:paddingBottom="24dp"
                 android:paddingRight="16dp">
 
-
+         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/id"
+            android:textSize="18dp"
+            android:visibility="invisible"/>
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
