change Room in settings

--- a/app/src/main/res/layout/room_overview_list_item.xml
+++ b/app/src/main/res/layout/room_overview_list_item.xml
@@ -86,6 +86,7 @@
     <ImageButton android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/setting"
+                 android:id="@+id/image_button"
                  style="@style/ListButtonStyle"
             />
 
